fixed detail header font size and spacing

--- a/client/src/components/HowItWorks/HowItWorks.css
+++ b/client/src/components/HowItWorks/HowItWorks.css
@@ -69,6 +69,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .HowItWorks-detail-header {
@@ -82,7 +83,8 @@
 }
 
 .HowItWorks-detail-title {
-    margin-bottom: 25px;
+    margin-bottom: 5px;
+    font-size: 20px;
 }
 
 .HowItWorks-detail-body {
